<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vibes_profile_background"
    tools:context=".main_fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/user_information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/profile_white_background"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Nabil Saad" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="nabilsaad@gmail.com" />

        <Space
            android:id="@+id/spaceHolder"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:layout_below="@id/user_email"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@id/spaceHolder"
            android:layout_toLeftOf="@id/spaceHolder"
            android:background="@drawable/btn_profile_logout"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/profile_log_out_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/spaceHolder"
            android:layout_toRightOf="@id/spaceHolder"
            android:background="@drawable/btn_profile_update"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/profile_update_button"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_self_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/profile_self_introduction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/default_avatar"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        app:layout_anchor="@id/user_information_layout"
        app:layout_anchorGravity="top|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>